# mini_rag

./: .gitignore  Makefile  app.py  architecture.md  config.py  create_sample_pdfs.py  evaluate.py  example_results.json  examples.py  project_summary.md  pyproject.toml  quickstart.md  rag.py  readme.md  requirements.txt  setup.sh
src/: __init__..py  document_processor.py  embeddings.py  rag_engine.py
tests/: __init__.py  test_document_processor.py  test_embeddings.py  test_rag_engine.py
